<resources>
    <string name="app_name">Celcius-to-Farenheit</string>

    <string name="main_activity_text">Enter Password to Sign into App</string>
    <string name="main_activity_submit">Sign In</string>
    <string name="main_activity_pass_hint">*use password: "unsecured"</string>
    <string name="main_activity_unsecure_password">unsecured</string>
    <string name="main_activity_password_invalid">Invalid Password</string>

    <string name="converter_activity_text">Enter Degrees for Conversion:</string>
    <string name="to_fahrenheit">Convert To Fahrenheit</string>
    <string name="to_celsius">Convert To Celsius</string>
    <string name="conversion_error">Unable To Convert</string>

</resources>
