<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/grey"
    tools:context=".ActivityConverter">

    <TextView
        android:id="@+id/main_activity_text_view"
        android:text="@string/converter_activity_text"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:layout_marginBottom="300px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/converter_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/converter_to_fahrenheit"
            android:text="@string/to_fahrenheit"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/converter_to_celsius"
            android:text="@string/to_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <EditText
        android:id="@+id/converter_activity_text_edit"
        android:background="@color/white"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:layout_width="600px"
        android:layout_height="100px" />

    <TextView
        android:id="@+id/converter_activity_results"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>